ella/newman/media/css/base.css
/* Please try keep all stylesheets in one file */

/* primitives */
.cb { clear: both; }

a, a:link, a:visited {
    color: darkblue;
    cursor: pointer;
}
a:hover {
  color: darkorange;
}
a img {
    border: none;
}

p, ul, ol, h1, h2, h3, h4, h5 { margin: .2em 0; }

ul, ol {
    margin-left: 2em;
}

/* base default layout */
* { margin: 0; padding: 0; }

body {
    font: normal normal 75%/130% Tahoma, sans-serif;
    background: #eee;
}

/* Dynamic */

.loading { opacity: .3; }

/* HEADER */

#header {
    background: pink;
    overflow: auto;
    padding: 5px;
    border-bottom: 1px solid #ccc;
}
#header a, #header a:visited {
    color: #333;
    text-decoration: none;
}

#branding {
    float: left;
}
#user-tools {
    margin-top: 5px;
    float: right;
}

/* BREADCRUMBS */
div.breadcrumbs {
    background: #ffc;
    border-bottom: 1px solid darkorange;
    padding: 3px 5px;
    overflow: auto;
}

/* FAVORITE ITEMS */
.favs {
    background: #ffc;
    height: 76px;
    border-bottom: 1px solid darkorange;
    padding: 5px;
}

.favs ul.items {
    float: left;
    list-style: none;
    margin: 0; padding: 0;
}
.favs ul.items li {
    float: left;
    margin: 2px;
    padding: 0;
    width: 70px;
    height: 70px;
    border: 1px solid #ddd;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}
.favs ul.items li a {
    display: block;
    text-align: center;
    text-decoration: none;
}
.favs ul.items li a.app {
    background: transparent url(../ico/favs/gear.png) 50% 18px no-repeat;
    width: 70px;
    height: 50px;
    font-weight: bold;
    padding-top: 2px;
}

.favs ul.items li a.app.article { background-image: url(../ico/favs/article.png) }

.favs ul.items li:hover {
    background-color: #ffe;
}

.favs ul.tools {
    float: right;
    list-style: none;
    font: normal 130%/150% "Trebuchet MS", sans-serif;
}

.favs ul.tools a {
    text-decoration: none;
}

/* CONTENT */
#content {
/*    background: #eee;
    padding: 5px;
    position: fixed;
    top: 112px; left: 0; bottom: 28px; right: 0;
    overflow: auto; */
    padding-bottom: 30px;
}

/* CONTENT TOOLBAR */
#content-toolbar * {
    vertical-align: middle ! important;
}
#content-toolbar {
    background: #fff;
    padding: 6px 5px;
}
#content-toolbar ul {
    list-style: none;
    margin: 0; padding: 0;
}
#content-toolbar ul li {
    display: inline;
}


/* HP */
div.hpcol {
    float: left;
}
div.hpbox {
    background: #fff;
    border: 1px solid #ccc;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    margin: 10px 5px;
    min-width: 200px;
}
div.hpbox h3 {
    background: #ddd;
    padding: 3px 5px;
    border-bottom: 1px solid #ccc;
    margin: 0;
}
div.hpbox div.cnt {
    margin: 5px;
}
div.hpbox.devmsgs .item {
    margin: 5px 0;
    padding-bottom: 5px;
    border-bottom: 1px dotted #ddd;
}

div.hpbox.lastlog {
    float: right;
}
div.hpbox.errmsg label, div.hpbox.errmsg input, div.hpbox.errmsg textarea {
    width: 99%;
}

a.bl {
    display: block;
}
a.icn {
    padding-left: 20px;
    background: transparent url(../ico/16/foo.png) 0 50% no-repeat;
}
a.btn {
    padding-top: 3px; padding-bottom: 3px; padding-right: 4px;
    border: 1px solid #ccc;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    background-color: #ddd;
    margin: 3px 2px;
    text-decoration: none;
}
a.btn.def {
    font-weight: bold;
    background-color: #eee;
}
a:hover.btn {
    background-color: #666;
}

a.btn.icn {
    background-position: 3px 50%;
    padding-left: 23px;
}

a.icn.logout { background-image: url(../ico/16/logout.png); }
a.icn.config { background-image: url(../ico/16/configure.png); }
a.icn.addfav { background-image: url(../ico/16/bookmark_add.png); }
a.icn.eclear { background-image: url(../ico/16/editclear.png); }
a.icn.home { background-image: url(../ico/16/gohome.png); }
a.icn.ok { background-image: url(../ico/16/ok.png); }
a.icn.cancel { background-image: url(../ico/16/cancel.png); }
a.icn.recur { background-image: url(../ico/16/recur.png); }
a.icn.na { background-image: url(../ico/16/na.png); }
a.icn.search { background-image: url(../ico/16/search.png); }
a.icn.filter { background-image: url(../ico/16/filter.png); }
a.icn.add { background-image: url(../ico/16/edit_add.png); }
a.icn.visible { background-image: url(../ico/16/14_layer_visible.png); }
a.icn.novisible { background-image: url(../ico/16/14_layer_novisible.png); }
a.icn.history { background-image: url(../ico/16/history.png); }
a.icn.web { background-image: url(../ico/16/web.png); }
a.icn.save { background-image: url(../ico/16/filesave.png); }

/* FOOTER */

#footer {
    background:#eee url(../img/admin/nav-bg-reverse.gif) bottom left repeat-x;
    position: fixed; left: 0; bottom: 0; right: 0;
    clear: both;
    border-top: 1px dotted #999;
    padding: 5px;
    text-align: right;
}

/* FORMS */
fieldset, legend { border: 1px solid #ddd; padding: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; background: #fff; }
legend { padding: 2px 5px; }
label { display: block; clear: both; margin: 5px 0 2px 0; }
label.vCheckboxLabel { display: inline; margin-left: 10px; }
label.required { font-weight: bold; color: darkorange; }
div.submit-row, fieldset.submit-row { border: none; clear:both; margin-top: 5px; padding: 2px 0; text-align: right; }
input, textarea, select { padding: 2px 0; font: normal 100% Tahoma, Verdana, sans-serif; }
.ajax-form .form-metadata { display: none; }
input[type=text] { width: 500px; }
input.vIntegerField { width: 40px; text-align: right; }
input.vDateInput, input.vForeignKeyRawIdAdminField { width: 40px; }
input.vDateTimeInput { width: 130px; }

.form-row * { vertical-align: middle; margin: 2px 0; }

.form-error-msg { padding: 0 5px; color: red; font-weight: bold; }

/* FORMS : article change form */
.article-form-container { padding-left: 10px; }
.article-form-container .multicol { float: left; margin-right: 200px; }
/*.article-form-container .multicol.colX { margin-left: 200px; }*/
.article-form-container .multicol input { width: ; }
.article-form-container label { display: block; float: left; min-width: 100px; }
.article-form-container .publish-container label { float: none; }
.change-form .submit-row {
    position: fixed;
    bottom: 27px;
    right: 0;
    border-left: 2px solid red;
    border-top: 2px solid red;
    -moz-border-radius-topleft: 10px;
    padding: 10px;
    background: #ffc;
}
.change-form .submit-row a {
    white-space: nowrap;
}

/* TABLES */
table {
    border-collapse: collapse;
}
td, th {
    text-align: left;
    border: 1px solid #ddd;
    padding: 3px;
}
.inline-group td, .inline-group th {
    border: none;
}

#changelist table {
    width: 100%;
}
#changelist table thead tr { background: #ccc; }
#changelist table tbody tr.row1 { background: #fff; }
#changelist table tbody tr.row2 { background: #eee; }
#changelist table tbody tr:hover { background: #ffc; }
#changelist table thead th.sorted { background: #eee; }

/* CHANGELIST ACTIONS */
#changelist .actions { padding: 5px; }
#changelist .actions label { display: inline; }

/* CHANGELIST FILTERS */
#filters {
    margin: 0 5px;
    background: #fff;
}

/* OPERATION MESSAGES */
#opmsg {
    position: fixed;
    top: -10px;
    width: 100%;
    text-align: center;
}
#opmsg span {
    padding: 5px 5px 5px 22px;
    border: solid 1px black;
    font-weight: bold;
    line-height: 26px;
    white-space: nowrap;
    background: lightyellow url(../ico/16/info.png) 2px 50% no-repeat;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;

}
#opmsg span.errmsg {
    background-color: orange;
    background-image: url(../ico/16/messagebox_warning.png);
}
#opmsg span.okmsg {
    background-image: url(../ico/16/ok.png);
}

/* FILTERS (UN)PACKING - TEMPORARY */
#filters ul {
    display: none;
    position: absolute;
    background-color: white;
    border: solid 1px black;
    list-style-position: inside;
    padding: 2px;
}
#filters .selected {
    font-weight: bold;
}

/* HELP & HINT */
.hint-enhanced .hint, .help-enhanced .help {
    display: none;
}

/* OBJECT HISTORY (in change_form) */
#history {
  position: absolute;
  right: 6px;
  top: 168px;
  width: 70%;
  background: #ddd;
  display: none;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}
#history div.module {
  margin: 10px;
  max-height: 300px;
  overflow: auto;
  background: #eee;
}

#filters {
  position: absolute;
  left: 0; right: 0;
  top: 168px;
  background: #ddd;
  display: none;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

#filters div.module {
  margin: 5px;
  max-height: 200px;
  overflow: auto;
}

#filters div.filter {
    background: #eee;
    float: left;
    margin: 0 2px;
    padding: 2px;
}

